# onvif_client

./: .gitignore  CMakeLists.txt  Makefile  README.md  sync.txt  test_ptz.service
lib/: onvifApi.cpp  onvifApi.h  onvifClient.cpp  onvifClient.h  onvifStruct.h  soapAdvancedSecurityServiceBindingProxy.cpp  soapAdvancedSecurityServiceBindingProxy.h  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.cpp  soapImagingBindingProxy.cpp  soapMediaBindingProxy.cpp  soapMediaBindingProxy.h  soapPTZBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.cpp  soapStub.h  soapwsddProxy.cpp  wsdd.nsmap  wsddC.cpp  wsddClient.cpp  wsddServer.cpp
libOnvif/: CMakeLists.txt  onvifApi.cpp  onvifApi.h  soapAdvancedSecurityServiceBindingProxy.cpp  soapCredentialBindingProxy.cpp  soapCredentialBindingProxy.h  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapImagingBindingProxy.cpp  soapImagingBindingProxy.h  soapMediaBindingProxy.cpp  soapPTZBindingProxy.cpp  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapReceiverBindingProxy.cpp  soapReceiverBindingProxy.h  soapRecordingBindingProxy.cpp  soapRecordingBindingProxy.h  soapRemoteDiscoveryBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.h  soapReplayBindingProxy.cpp  soapReplayBindingProxy.h  soapRuleEngineBindingProxy.cpp  soapRuleEngineBindingProxy.h  soapScheduleBindingProxy.cpp  soapScheduleBindingProxy.h  soapwsddProxy.cpp  soapwsddProxy.h  wsdd.nsmap  wsddC.cpp  wsddClient.cpp  wsddServer.cpp
src/: Makefile  main.cpp  test_ptz.cpp
